[tool.poetry]
name = "matroska-cache"
version = "0.1.4"
description = "Caching with dependency tracking"
authors = ["Mark Vartanyan <kolypto@gmail.com>"]
repository = 'https://github.com/kolypto/py-matroska_cache'

[tool.poetry.dependencies]
python = "^3.9"
redis = {version = ">=4,<6", optional = true}
sqlalchemy = {version = "^1.3", optional = true}
setuptools = "^75.1.0"

[tool.poetry.dev-dependencies]
nox = "^2020.8.22"
pytest = "^7.4.0"
pytest-cov = "^2.10.1"
sqlalchemy = "^1.3.19"
fakeredis = "^2.25.1"

[tool.pytest.ini_options]
testpaths = [
    "tests/",
]
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
